# example/Http/Controllers/TextController.php
@@ -2,17 +2,20 @@
 
 declare(strict_types=1);
 
-namespace Example\Http\Controllers;
+namespace App\Http\Controllers;
 
 use App\Dto\Request\HeadRequestDto;
 use App\Dto\Request\QueryRequest;
 use App\Dto\Request\RequestDto;
 use App\Dto\Response\ResponseDto;
+use DateTimeImmutable;
 use Illuminate\Routing\Controller;
 use Kr0lik\ParamConverter\Annotation\ParamConverter;
 use OpenApi\Attributes\Response;
 use OpenApi\Attributes\Tag;
 use Spatie\RouteAttributes\Attributes\Route;
+use Spatie\RouteAttributes\Attributes\Where;
+use Spatie\RouteAttributes\Attributes\WhereUlid;
 
 class TextController extends Controller
 {
@@ -25,13 +28,14 @@ class TextController extends Controller
     #[Response(response: 300, description: 'response-from-attribute')]
     public function postAction(RequestDto $requestDto, int|string|null $multipleVar, ?array $arrayOptionalVar = []): ResponseDto
     {
-        return new ResponseDto(1, 'string', 1.1);
+        return new ResponseDto(1, 'string', new DateTimeImmutable());
     }
 
-    #[Route(['get'], 'get-route/{id}', middleware: ['api'])]
+    #[Route(['get'], 'get-route/{uuid}', middleware: ['api'])]
+    #[WhereUlid('uuid')]
     #[ParamConverter('queryRequest', QueryRequest::class, options: ['source' => 'query'])]
-    public function getAction(QueryRequest $queryRequest, HeadRequestDto $headers, int $id): ResponseDto
+    public function getAction(QueryRequest $queryRequest, HeadRequestDto $headers, string $uuid): ResponseDto
     {
-        return new ResponseDto(1, 'string', 1.1);
+        return new ResponseDto(1, 'string', new DateTimeImmutable());
     }
 }
